--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "morgan": "~1.9.1",
     "multer": "^1.4.4",
     "nanoid": "^3.3.1",
@@ -26,6 +27,7 @@
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
     "pg": "^8.7.3",
+    "pg-format": "^1.0.4",
     "sharp": "^0.30.2",
     "uuidv4": "^6.2.12",
     "validator": "^13.7.0",
@@ -45,6 +47,7 @@
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
     "@types/pg": "^8.6.4",
+    "@types/pg-format": "^1.0.2",
     "@types/sharp": "^0.29.5",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/validator": "^13.7.1",
